cambio en el /loan_approval.csv"
Original: df = pd.read_csv("/loan_approval.csv")

Cambia a: df = pd.read_csv("loan_approval.csv")

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MoMlan3IWJN8",
-        "outputId": "d5cb9866-508a-471e-f034-eb6a2571f106"
+        "outputId": "cd3e3d97-9a9c-4dc6-b6aa-29057c60566a"
       },
       "outputs": [
         {
@@ -71,7 +71,7 @@
         "# --- 2. Carga del archivo de datos ---\n",
         "\n",
         "# Se lee el archivo \"loan_approval.csv\".\n",
-        "df = pd.read_csv(\"/loan_approval.csv\")\n",
+        "df = pd.read_csv(\"loan_approval.csv\")\n",
         "\n",
         "# --- 3. Revisión de los datos (para el informe) ---\n",
         "\n",
@@ -146,9 +146,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GHPo6S2PXMVI",
-        "outputId": "b941ad0e-206e-4d25-f44a-382cb08779ff"
+        "outputId": "cf22f8dd-0b32-418d-80db-e417bd86df1f"
       },
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,9 +217,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v1tApWv_XcKa",
-        "outputId": "fea9028e-79f7-4dc9-8b71-73b5b6b86e6f"
+        "outputId": "54a1b369-6b2f-47be-fb6d-469c05a2e7c8"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
